# jax-mnist

./: .gitignore  README.md  input_pipeline.py  main.py  mnist_benchmark.py  models.py  pyproject.toml  train.py  train_test.py
configs/: __init__.py  base.py  default.py
