[project]
name = "jax-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==1.0.0",
    "clu==0.0.6",
    "flax==0.10.0",
    "jax[cuda12]>=0.4.34",
    "ml-collections==0.1.0",
    "numpy<2",
    "tensorflow-datasets>=4.4.0",
    "tensorflow[and-cuda]>=2.9.0",
]
